--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bcrypt = "0.15.1"
 dotenv = "0.15.0"
+jsonwebtoken = "9.3.0"
 rocket = { version = "0.5.0", features = ["json"] }
 sea-orm = { version = "0.12", features = [
     "sqlx-postgres",
